# tmplbook

./: CMakeLists.txt  cmake.sh
bridge/: functionptr.hpp  functorbridge.hpp  test.cpp
traits/: test.cpp
